[gd_scene load_steps=12 format=2]

[ext_resource path="res://4.Enemies/Long Neck/Long Neck.tscn" type="PackedScene" id=1]
[ext_resource path="res://4.Enemies/crawling/crawling.tscn" type="PackedScene" id=2]
[ext_resource path="res://4.Enemies/Dragon Boss/Battery/Battery.tscn" type="PackedScene" id=3]
[ext_resource path="res://4.Enemies/Dragon Boss/Dragon Boss.tscn" type="PackedScene" id=4]
[ext_resource path="res://2. Levels/0-0 Prototype Level/Prototype Level.gd" type="Script" id=5]
[ext_resource path="res://2. Levels/tilesets/mega_metal.tres" type="TileSet" id=6]
[ext_resource path="res://3.World/Electric_Door_64x16.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22, 6 )

[sub_resource type="Animation" id=2]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Door Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 16, 0, 16, 64 ), Rect2( 32, 0, 16, 64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Door Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1072, 232 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Door Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 16, 64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Door Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1096, 232 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 200 )

[node name="Prototype Level" type="Node2D"]
script = ExtResource( 5 )
boss_scene = ExtResource( 4 )
boss_camera_dict = {
"h value": 0.1,
"max x": 1328,
"max y": 100,
"mean x": 1328,
"mean y": 80,
"min x": 1328,
"min y": -48,
"motion scaler": 1
}

[node name="Map" type="Node2D" parent="." groups=[
"Wall",
]]

[node name="TileMap" type="TileMap" parent="Map" groups=[
"Wall",
]]
position = Vector2( 0, -272 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
collision_layer = 18
collision_mask = 9
format = 1
tile_data = PoolIntArray( 0, 0, 65536, 458818, 0, 131073, 458819, 0, 131075, 458849, 0, 131073, 458850, 0, 131075, 524354, 0, 196609, 524355, 0, 196611, 524385, 0, 196609, 524386, 0, 196611, 589890, 0, 196609, 589891, 0, 196611, 589921, 0, 196609, 589922, 0, 196611, 655426, 0, 196609, 655427, 0, 196611, 655457, 0, 196609, 655458, 0, 196611, 720962, 0, 196609, 720963, 0, 196611, 720993, 0, 196609, 720994, 0, 196611, 786498, 0, 196609, 786499, 0, 131077, 786500, 0, 131074, 786501, 0, 131074, 786502, 0, 131075, 786529, 0, 196609, 786530, 0, 196611, 852034, 0, 196609, 852035, 0, 196613, 852036, 0, 262146, 852037, 0, 262146, 852038, 0, 262147, 852065, 0, 196609, 852066, 0, 196611, 917570, 0, 196609, 917571, 0, 196611, 917601, 0, 196609, 917602, 0, 196611, 983106, 0, 196609, 983107, 0, 196611, 983137, 0, 196609, 983138, 0, 196611, 1048642, 0, 196609, 1048643, 0, 196611, 1048673, 0, 196609, 1048674, 0, 196611, 1114112, 0, 131073, 1114113, 0, 131074, 1114114, 0, 131075, 1114178, 0, 196609, 1114179, 0, 196611, 1114209, 0, 196609, 1114210, 0, 196611, 1179648, 0, 196609, 1179649, 0, 196610, 1179650, 0, 196611, 1179714, 0, 196609, 1179715, 0, 196611, 1179745, 0, 196609, 1179746, 0, 196611, 1245184, 0, 196609, 1245185, 0, 196610, 1245186, 0, 196611, 1245250, 0, 196609, 1245251, 0, 196611, 1245281, 0, 196609, 1245282, 0, 196611, 1310720, 0, 196609, 1310721, 0, 196610, 1310722, 0, 196611, 1310786, 0, 196609, 1310787, 0, 196611, 1310817, 0, 196609, 1310818, 0, 196611, 1376256, 0, 196609, 1376257, 0, 196610, 1376258, 0, 131077, 1376259, 0, 131075, 1376322, 0, 196609, 1376323, 0, 196611, 1376353, 0, 196609, 1376354, 0, 196611, 1441792, 0, 196609, 1441793, 0, 196610, 1441794, 0, 196610, 1441795, 0, 196611, 1441812, 0, 131073, 1441813, 0, 131074, 1441814, 0, 131075, 1441858, 0, 196609, 1441859, 0, 196611, 1441889, 0, 196609, 1441890, 0, 196611, 1507328, 0, 196609, 1507329, 0, 196610, 1507330, 0, 196610, 1507331, 0, 196611, 1507348, 0, 262145, 1507349, 0, 196612, 1507350, 0, 196611, 1507394, 0, 196609, 1507395, 0, 196611, 1507425, 0, 196609, 1507426, 0, 196611, 1572864, 0, 196609, 1572865, 0, 196610, 1572866, 0, 196610, 1572867, 0, 196611, 1572885, 0, 262145, 1572886, 0, 262147, 1572919, 0, 131073, 1572920, 0, 131074, 1572921, 0, 131074, 1572922, 0, 131074, 1572923, 0, 131074, 1572924, 0, 131074, 1572925, 0, 131074, 1572926, 0, 131075, 1572930, 0, 196609, 1572931, 0, 196611, 1572961, 0, 196609, 1572962, 0, 196611, 1638400, 0, 196609, 1638401, 0, 196610, 1638402, 0, 196613, 1638403, 0, 262147, 1638432, 0, 131072, 1638436, 0, 131073, 1638437, 0, 131075, 1638445, 0, 131073, 1638446, 0, 131075, 1638455, 0, 196609, 1638456, 0, 196610, 1638457, 0, 196610, 1638458, 0, 196610, 1638459, 0, 196610, 1638460, 0, 196610, 1638461, 0, 196610, 1638462, 0, 196611, 1638466, 0, 196609, 1638467, 0, 196611, 1638497, 0, 196609, 1638498, 0, 196611, 1703936, 0, 196609, 1703937, 0, 196610, 1703938, 0, 196611, 1703968, 0, 262150, 1703969, 0, 262148, 1703970, 0, 65538, 1703971, 0, 65538, 1703972, 0, 327685, 1703973, 0, 262147, 1703981, 0, 262145, 1703982, 0, 262147, 1703991, 0, 196609, 1703992, 0, 196610, 1703993, 0, 196610, 1703994, 0, 196610, 1703995, 0, 196610, 1703996, 0, 196610, 1703997, 0, 196610, 1703998, 0, 196611, 1704002, 0, 196609, 1704003, 0, 196611, 1704033, 0, 196609, 1704034, 0, 196611, 1769472, 0, 196609, 1769473, 0, 196610, 1769474, 0, 196611, 1769504, 0, 196609, 1769505, 0, 196611, 1769527, 0, 262145, 1769528, 0, 262146, 1769529, 0, 262146, 1769530, 0, 262146, 1769531, 0, 262146, 1769532, 0, 262146, 1769533, 0, 262146, 1769534, 0, 262147, 1769538, 0, 196609, 1769539, 0, 196611, 1769544, 0, 65537, 1769545, 0, 65538, 1769546, 0, 65539, 1769559, 0, 65537, 1769560, 0, 65538, 1769561, 0, 65539, 1769569, 0, 196609, 1769570, 0, 196611, 1835008, 0, 196609, 1835009, 0, 196610, 1835010, 0, 196611, 1835020, 0, 131073, 1835021, 0, 131074, 1835022, 0, 131075, 1835040, 0, 196609, 1835041, 0, 196611, 1835049, 0, 131073, 1835050, 0, 131075, 1835055, 0, 131073, 1835056, 0, 131075, 1835074, 0, 196609, 1835075, 0, 196611, 1835105, 0, 196609, 1835106, 0, 196611, 1900544, 0, 196609, 1900545, 0, 196610, 1900546, 0, 196611, 1900555, 0, 65537, 1900556, 0, 327685, 1900557, 0, 262146, 1900558, 0, 327684, 1900559, 0, 65539, 1900576, 0, 196609, 1900577, 0, 196611, 1900585, 0, 262145, 1900586, 0, 262147, 1900591, 0, 262145, 1900592, 0, 262147, 1900610, 0, 262145, 1900611, 0, 262147, 1900641, 0, 196609, 1900642, 0, 196611, 1966080, 0, 196609, 1966081, 0, 196610, 1966082, 0, 196611, 1966112, 0, 262145, 1966113, 0, 262147, 1966131, 0, 131073, 1966132, 0, 131075, 1966155, 0, 65537, 1966156, 0, 65538, 1966157, 0, 65539, 1966164, 0, 65537, 1966165, 0, 65538, 1966166, 0, 65538, 1966167, 0, 65539, 1966177, 0, 196609, 1966178, 0, 196611, 2031616, 0, 196609, 2031617, 0, 196610, 2031618, 0, 196611, 2031639, 0, 131073, 2031640, 0, 131074, 2031641, 0, 131074, 2031642, 0, 131074, 2031643, 0, 131074, 2031644, 0, 131074, 2031645, 0, 131075, 2031667, 0, 196609, 2031668, 0, 196611, 2031713, 0, 196609, 2031714, 0, 196611, 2097152, 0, 196609, 2097153, 0, 196610, 2097154, 0, 196611, 2097167, 0, 131072, 2097169, 0, 131072, 2097175, 0, 196609, 2097176, 0, 196610, 2097177, 0, 196610, 2097178, 0, 196610, 2097179, 0, 196610, 2097180, 0, 196610, 2097181, 0, 196611, 2097188, 0, 131073, 2097189, 0, 131074, 2097190, 0, 131074, 2097191, 0, 131074, 2097192, 0, 131074, 2097193, 0, 131074, 2097194, 0, 131074, 2097195, 0, 131075, 2097203, 0, 196609, 2097204, 0, 196611, 2097249, 0, 196609, 2097250, 0, 196611, 2162688, 0, 196609, 2162689, 0, 196610, 2162690, 0, 131077, 2162691, 0, 131074, 2162692, 0, 131074, 2162693, 0, 131074, 2162694, 0, 131074, 2162695, 0, 131074, 2162696, 0, 131074, 2162697, 0, 131074, 2162698, 0, 131074, 2162699, 0, 131074, 2162700, 0, 131074, 2162701, 0, 131074, 2162702, 0, 131074, 2162703, 0, 8, 2162704, 0, 131074, 2162705, 0, 8, 2162706, 0, 131074, 2162707, 0, 131074, 2162708, 0, 131074, 2162709, 0, 131074, 2162710, 0, 131074, 2162711, 0, 131076, 2162712, 0, 196610, 2162713, 0, 196610, 2162714, 0, 196610, 2162715, 0, 196610, 2162716, 0, 196610, 2162717, 0, 131077, 2162718, 0, 131074, 2162719, 0, 131074, 2162720, 0, 131074, 2162721, 0, 131074, 2162722, 0, 131074, 2162723, 0, 131074, 2162724, 0, 131076, 2162725, 0, 196610, 2162726, 0, 196610, 2162727, 0, 196610, 2162728, 0, 196610, 2162729, 0, 196610, 2162730, 0, 196610, 2162731, 0, 131077, 2162732, 0, 131074, 2162733, 0, 131074, 2162734, 0, 131074, 2162735, 0, 131074, 2162736, 0, 131074, 2162737, 0, 131074, 2162738, 0, 131074, 2162739, 0, 131076, 2162740, 0, 131077, 2162741, 0, 131074, 2162742, 0, 131074, 2162743, 0, 131074, 2162744, 0, 131074, 2162745, 0, 131074, 2162746, 0, 131074, 2162747, 0, 131074, 2162748, 0, 131074, 2162749, 0, 131074, 2162750, 0, 131074, 2162751, 0, 131074, 2162752, 0, 131074, 2162753, 0, 131074, 2162754, 0, 131074, 2162755, 0, 131074, 2162756, 0, 131074, 2162757, 0, 131074, 2162758, 0, 131074, 2162759, 0, 131074, 2162760, 0, 131074, 2162761, 0, 131074, 2162762, 0, 131074, 2162763, 0, 131074, 2162764, 0, 131074, 2162765, 0, 131074, 2162766, 0, 131074, 2162767, 0, 131074, 2162768, 0, 131074, 2162769, 0, 131074, 2162770, 0, 131074, 2162771, 0, 131074, 2162772, 0, 131074, 2162773, 0, 131074, 2162774, 0, 131074, 2162775, 0, 131074, 2162776, 0, 131074, 2162777, 0, 131074, 2162778, 0, 131074, 2162779, 0, 131074, 2162780, 0, 131074, 2162781, 0, 131074, 2162782, 0, 131074, 2162783, 0, 131074, 2162784, 0, 131074, 2162785, 0, 131076, 2162786, 0, 196611, 2228224, 0, 262145, 2228225, 0, 262146, 2228226, 0, 262146, 2228227, 0, 262146, 2228228, 0, 262146, 2228229, 0, 262146, 2228230, 0, 262146, 2228231, 0, 262146, 2228232, 0, 262146, 2228233, 0, 262146, 2228234, 0, 262146, 2228235, 0, 262146, 2228236, 0, 262146, 2228237, 0, 262146, 2228238, 0, 262146, 2228239, 0, 262146, 2228240, 0, 262146, 2228241, 0, 262146, 2228242, 0, 262146, 2228243, 0, 262146, 2228244, 0, 262146, 2228245, 0, 262146, 2228246, 0, 262146, 2228247, 0, 262146, 2228248, 0, 262146, 2228249, 0, 262146, 2228250, 0, 262146, 2228251, 0, 262146, 2228252, 0, 262146, 2228253, 0, 262146, 2228254, 0, 262146, 2228255, 0, 262146, 2228256, 0, 262146, 2228257, 0, 262146, 2228258, 0, 262146, 2228259, 0, 262146, 2228260, 0, 262146, 2228261, 0, 262146, 2228262, 0, 262146, 2228263, 0, 262146, 2228264, 0, 262146, 2228265, 0, 262146, 2228266, 0, 262146, 2228267, 0, 262146, 2228268, 0, 262146, 2228269, 0, 262146, 2228270, 0, 262146, 2228271, 0, 262146, 2228272, 0, 262146, 2228273, 0, 262146, 2228274, 0, 262146, 2228275, 0, 262146, 2228276, 0, 262146, 2228277, 0, 262146, 2228278, 0, 262146, 2228279, 0, 262146, 2228280, 0, 262146, 2228281, 0, 262146, 2228282, 0, 262146, 2228283, 0, 262146, 2228284, 0, 262146, 2228285, 0, 262146, 2228286, 0, 262146, 2228287, 0, 262146, 2228288, 0, 262146, 2228289, 0, 262146, 2228290, 0, 262146, 2228291, 0, 262146, 2228292, 0, 262146, 2228293, 0, 262146, 2228294, 0, 262146, 2228295, 0, 262146, 2228296, 0, 262146, 2228297, 0, 262146, 2228298, 0, 262146, 2228299, 0, 262146, 2228300, 0, 262146, 2228301, 0, 262146, 2228302, 0, 262146, 2228303, 0, 262146, 2228304, 0, 262146, 2228305, 0, 262146, 2228306, 0, 262146, 2228307, 0, 262146, 2228308, 0, 262146, 2228309, 0, 262146, 2228310, 0, 262146, 2228311, 0, 262146, 2228312, 0, 262146, 2228313, 0, 262146, 2228314, 0, 262146, 2228315, 0, 262146, 2228316, 0, 262146, 2228317, 0, 262146, 2228318, 0, 262146, 2228319, 0, 262146, 2228320, 0, 262146, 2228321, 0, 262146, 2228322, 0, 262147 )

[node name="Boss Destroy TileMap" type="TileMap" parent="Map" groups=[
"Wall",
]]
z_index = 2
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
collision_layer = 18
collision_mask = 9
format = 1
tile_data = PoolIntArray( -327613, 0, 131077, -327612, 0, 131074, -327611, 0, 131074, -327610, 0, 131074, -327609, 0, 131074, -327608, 0, 131074, -327607, 0, 131074, -327606, 0, 131074, -327605, 0, 131074, -327604, 0, 131074, -327603, 0, 131074, -327602, 0, 131074, -327601, 0, 131074, -327600, 0, 131074, -327599, 0, 131074, -327598, 0, 131074, -327597, 0, 131074, -327596, 0, 131074, -327595, 0, 131074, -327594, 0, 131074, -327593, 0, 131074, -327592, 0, 131074, -327591, 0, 131074, -327590, 0, 131074, -327589, 0, 131074, -327588, 0, 131074, -327587, 0, 131074, -327586, 0, 131074, -327585, 0, 131074, -327584, 0, 131074, -327583, 0, 131076, -262077, 0, 196613, -262076, 0, 262146, -262075, 0, 262146, -262074, 0, 262146, -262073, 0, 262146, -262072, 0, 262146, -262071, 0, 262146, -262070, 0, 262146, -262069, 0, 262146, -262068, 0, 262146, -262067, 0, 262146, -262066, 0, 262146, -262065, 0, 262146, -262064, 0, 262146, -262063, 0, 262146, -262062, 0, 262146, -262061, 0, 262146, -262060, 0, 262146, -262059, 0, 262146, -262058, 0, 262146, -262057, 0, 262146, -262056, 0, 262146, -262055, 0, 262146, -262054, 0, 262146, -262053, 0, 262146, -262052, 0, 262146, -262051, 0, 262146, -262050, 0, 262146, -262049, 0, 262146, -262048, 0, 262146, -262047, 0, 196612, 80, 0, 131072, 84, 0, 131072, 65616, 0, 196608, 65620, 0, 196608, 131152, 0, 262144, 131156, 0, 262144, 262216, 0, 131072, 262224, 0, 131072, 262231, 0, 131072, 327752, 0, 131078, 327760, 0, 262144, 327764, 0, 65542, 327765, 0, 65538, 327767, 0, 131079, 393300, 0, 196608, 458828, 0, 131072, 458836, 0, 196608, 524364, 0, 262144, 524372, 0, 196608, 589908, 0, 196608, 655440, 0, 131072, 655444, 0, 262144, 720976, 0, 262144, 983119, 0, 131073, 983120, 0, 131074, 983121, 0, 131075, 1048655, 0, 131076, 1048656, 0, 196610, 1048657, 0, 131077 )

[node name="Boss Final Destroy TileMap" type="TileMap" parent="Map" groups=[
"Wall",
]]
z_index = 1
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
collision_layer = 18
collision_mask = 9
format = 1
tile_data = PoolIntArray( 65611, 0, 65537, 65612, 0, 65538, 65613, 0, 65539, 131160, 0, 65537, 131161, 0, 65538, 131162, 0, 65539, 327752, 0, 65537, 327753, 0, 65538, 327754, 0, 65539, 327765, 0, 65537, 327766, 0, 65538, 327767, 0, 65539, 458842, 0, 65537, 458843, 0, 65538, 458844, 0, 65539, 524366, 0, 65537, 524367, 0, 65538, 524368, 0, 65539 )

[node name="Enimies" type="Node2D" parent="."]

[node name="Ledger" parent="Enimies" instance=ExtResource( 2 )]
position = Vector2( 568, 256 )

[node name="Long Neck" parent="Enimies" instance=ExtResource( 1 )]
position = Vector2( 263.5, 256 )

[node name="Battery" parent="Enimies" instance=ExtResource( 3 )]
position = Vector2( 1536, 56 )

[node name="Battery2" parent="Enimies" instance=ExtResource( 3 )]
position = Vector2( 1100, 204 )

[node name="Battery3" parent="Enimies" instance=ExtResource( 3 )]
position = Vector2( 1104, -12 )

[node name="Battery4" parent="Enimies" instance=ExtResource( 3 )]
position = Vector2( 1100, -96 )

[node name="Player Start" type="Position2D" parent="."]
position = Vector2( 96, 192 )

[node name="Boss Start" type="Position2D" parent="."]
position = Vector2( 1516, 208 )

[node name="Boss Restart" type="Position2D" parent="."]
position = Vector2( 1520, 80 )

[node name="Boss Trigger" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss Trigger"]
position = Vector2( 1072, 232 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="Door Sprite" type="Sprite" parent="Boss Trigger"]
position = Vector2( 1072, 232 )
scale = Vector2( 1, 0.85 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 16, 0, 16, 64 )

[node name="Door Player" type="AnimationPlayer" parent="Boss Trigger"]
anims/Closed = SubResource( 2 )
anims/Opened = SubResource( 3 )

[node name="Left Boss Track" type="Area2D" parent="."]
position = Vector2( 1120, 96 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left Boss Track"]
position = Vector2( 0, -40 )
shape = SubResource( 4 )

[node name="Right Boss Track" type="Area2D" parent="."]
position = Vector2( 1520, 96 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right Boss Track"]
position = Vector2( 0, -40 )
shape = SubResource( 4 )

[node name="Door Stopper" type="StaticBody2D" parent="." groups=[
"Walls",
]]

[node name="Door Stopper Collision" type="CollisionShape2D" parent="Door Stopper"]
position = Vector2( 1072, 232 )
rotation = 1.5708
shape = SubResource( 1 )
one_way_collision = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1300, 80 )

[connection signal="battery_destroyed" from="Enimies/Battery" to="." method="_on_Battery_battery_destroyed"]
[connection signal="battery_destroyed" from="Enimies/Battery2" to="." method="_on_Battery2_battery_destroyed"]
[connection signal="battery_destroyed" from="Enimies/Battery3" to="." method="_on_Battery3_battery_destroyed"]
[connection signal="battery_destroyed" from="Enimies/Battery4" to="." method="_on_Battery3_battery_destroyed"]
[connection signal="body_entered" from="Left Boss Track" to="." method="_on_Left_Boss_Track_body_entered"]
[connection signal="body_entered" from="Right Boss Track" to="." method="_on_Right_Boss_Track_body_entered"]
